# poker-ai

./: CMakeLists.txt  CMakePresets.json
src/: main.cpp
